<!--
   Copyright (C) 2014 Google Inc.

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->
<!--
    Additional changes are made by Kitware Inc. and are also licensed under
    the Apache License, Version 2.0 (the "License"):

        http://www.apache.org/licenses/LICENSE-2.0
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/black"
    android:id="@+id/relativelayout"
    tools:context=".PointCloudActivity">

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/cameraLayout">

        <com.google.atap.tangoservice.TangoTextureCameraPreview
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/textureView"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="5dp"
            android:background="@android:color/background_light"
            android:alpha="0.5">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/serviceversion" />

                <TextView
                    android:id="@+id/version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/NA" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/appversion" />

                <TextView
                    android:id="@+id/appversion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/NA" />
            </LinearLayout>
               <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tangoevent" />

                <TextView
                    android:id="@+id/tangoevent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/NA" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start2device" />

            </LinearLayout>

              <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:text="@string/status" />

                <TextView
                    android:id="@+id/status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/NA" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/posecount" />

                 <TextView
                    android:id="@+id/posecount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/NA" />

                 <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deltatime" />

                 <TextView
                    android:id="@+id/deltatime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/NA" />

                 <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pose" />

                 <TextView
                    android:id="@+id/pose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/NA" />
                  <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quat" />

                 <TextView
                    android:id="@+id/quat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/NA" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/averageZ" />

                <TextView
                    android:id="@+id/averageZ"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/NA" />
            </LinearLayout>

             <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pointCount" />

                <TextView
                    android:id="@+id/pointCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/NA" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/frameDelta" />

                <TextView
                    android:id="@+id/frameDelta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/NA" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fileWritten" />

                <TextView
                    android:id="@+id/fileWritten"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/NA" />
            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/takeSnap"
        android:id="@+id/take_snap_button"
        android:layout_alignEnd="@+id/record_switch"
        android:background="#33FFFFFF"
        android:textColor="@android:color/background_light"
        android:layout_above="@+id/record_switch"
        android:layout_alignStart="@id/record_switch"
        android:layout_marginBottom="@dimen/activity_vertical_margin" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:id="@+id/record_switch"
        android:checked="false"
        android:text="@string/record"
        android:layout_alignStart="@+id/auto_mode_switch"
        android:textSize="18sp"
        android:layout_alignEnd="@+id/auto_mode_switch"
        android:background="#33FFFFFF"
        android:visibility="visible"
        android:textColor="@android:color/background_light"
        android:layout_gravity="left"
        android:layout_above="@+id/auto_mode_switch" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/autoMode"
        android:id="@+id/auto_mode_switch"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:checked="false"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="5dp"
        android:textSize="18sp"
        android:background="#33FFFFFF"
        android:textColor="@android:color/background_light"
        android:layout_alignTop="@+id/top_down_button" />

    <Button
        android:id="@+id/top_down_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="5dp"
        android:paddingRight="5dp"
        android:text="@string/top_down"
        android:visibility="visible"
        android:textColor="@android:color/darker_gray" />

    <com.google.atap.tango.ux.TangoUxLayout
        android:id="@+id/layout_tango"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/waitingBarLayout"
        android:background="@android:color/background_dark"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/waitingTextView"
            android:text="@string/waitSavingScan"
            android:gravity="center_horizontal"
            android:layout_gravity="center"
            android:textColorHighlight="@android:color/background_dark"
            android:textColor="@android:color/white" />

        <ProgressBar
            style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:id="@+id/progressBar"
            android:indeterminate="true" />
    </LinearLayout>

</RelativeLayout>